@@ -32,6 +32,8 @@ Other changes:
 
 * Some performance improvements, including Bugzilla report  25778.
 
+* Add <matches> condition. Bugzilla report 28883.
+
 
 Changes from Ant 1.7.0Beta1 to Ant 1.7.0Beta2
 =============================================
